<resources>
    <string name="app_name">pet-app</string>
    <string name="stringHeader">Things to do today</string>
    <string name="newthingtodo">Write new thing to do today</string>
    <string name="add">Add</string>
    <string name="viewtoDoList">View your to do list for today</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email">Email</string>
    <string name="enter_your_mobile_phone_number">Enter your mobile phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="surname">Surname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type:</string>


    try this :

    in your main activity :

    import android.content.Intent
    import android.os.Bundle
    import android.support.design.widget.Snackbar
    import android.support.v7.app.AppCompatActivity;
    import android.view.View
    import android.widget.ArrayAdapter
    import android.widget.Toast
    import kotlinx.android.synthetic.main.activity_logged.*
    import kotlinx.android.synthetic.main.content_logged.*
    import kotlinx.android.synthetic.main.content_main.*

    class logged : AppCompatActivity() {

    override fun onCreate(savedInstanceState: Bundle?) {
    super.onCreate(savedInstanceState)
    setContentView(R.layout.activity_logged)
    setSupportActionBar(toolbar)
    // Create an ArrayAdapter
    val adapter = ArrayAdapter.createFromResource(this,
    R.array.city_list, android.R.layout.simple_spinner_item)
    // Specify the layout to use when the list of choices appears
    adapter.setDropDownViewResource(
    android.R.layout.simple_spinner_dropdown_item)
    // Apply the adapter to the spinner
    spinner.adapter = adapter
    }

    fun getValues(view: View) {
    Toast.makeText(this, "Spinner 1 " + spinner.selectedItem.toString()
    , Toast.LENGTH_LONG).show()
    }

    }
    I put the list of item in strings.xml

    <string-array name="pet_types">
        <item>Dog</item>
        <item>Cat</item>
        <item>Other</item>
    </string-array>
</resources>
