<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity" android:background="@color/colorPrimary">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:hint="@string/enter_your_name"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/textView2" android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="365dp"
            android:layout_marginRight="365dp"/>
    <TextView
            android:text="@string/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="14sp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="346dp"
            android:layout_marginRight="346dp"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextSurname"
            android:hint="@string/enter_your_surname"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" android:textSize="14sp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="368dp"
            android:layout_marginRight="368dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:hint="@string/enter_your_email_address"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:textSize="14sp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="363dp"
            android:layout_marginRight="363dp"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhone"
            android:hint="@string/enter_your_mobile_phone_number"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            app:fontFamily="sans-serif-medium" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="379dp" android:layout_marginRight="379dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCity" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:popupBackground="@color/colorPrimary"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCity" android:textSize="14sp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="341dp"
            android:layout_marginRight="341dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/editTextPassword"
            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:hint="@string/enter_your_password"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" android:textSize="14sp"
            android:textColor="@color/colorAccent" app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="293dp"
            android:layout_marginRight="293dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword2" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="@string/repeat_your_password"
            android:textColorHint="@color/colorAccent" android:textColor="@color/colorAccent" android:typeface="sans"
            android:textSize="12sp"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignUp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="14sp" android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark" android:typeface="sans"/>
</android.support.constraint.ConstraintLayout>