<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity" android:id="@+id/relativeLayout1" android:background="@color/colorAccent"
        android:paddingLeft="15dp" android:paddingRight="15dp">


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/relativeLayout2"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:layout_centerInParent="true">
        <ImageView
                android:layout_width="151dp"
                android:layout_height="94dp" app:srcCompat="@mipmap/ic_launcher_pet3"
                android:id="@+id/imageView3"
                android:layout_centerHorizontal="true" android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                app:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/imageView3" android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmail"
                android:hint="@string/enter_your_email_address" android:textColor="@color/colorAccent"
                android:layout_below="@+id/textView6" android:textColorHint="@color/colorPrimaryDark"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="2dp"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-medium" android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/editTextEmail"
                android:id="@+id/txtPassword" android:layout_marginTop="4dp" android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPassword"
                android:layout_marginTop="2dp" android:layout_below="@+id/txtPassword"
                android:hint="@string/enter_your_password" android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent" android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" android:textSize="14sp"/>
        <Button
                android:text="Sign In"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSignIn" android:layout_marginTop="5dp"
                android:layout_below="@+id/editTextPassword"
                android:background="@color/colorPrimaryDark" android:textColor="@color/colorAccent"
                android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="Forgot sign in details?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonForgotSignIn"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/buttonSignIn"
                android:layout_marginTop="2dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:textColor="@color/colorPrimary" android:layout_alignRight="@id/buttonSignIn"
                style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
</RelativeLayout>